[gd_scene load_steps=5 format=3 uid="uid://bekcqxfxkfcf5"]

[ext_resource type="Theme" uid="uid://b0askjdx1bs38" path="res://Theme.tres" id="1_xivxa"]
[ext_resource type="Script" path="res://ui/DebugUI.gd" id="2_ueqtf"]
[ext_resource type="Script" path="res://ui/DebugInfo.gd" id="3_gy65f"]
[ext_resource type="FontVariation" uid="uid://du8fthyvf666a" path="res://Fonts/small_font.tres" id="4_4w6it"]

[node name="DebugUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_xivxa")
script = ExtResource("2_ueqtf")

[node name="DebugInfo" type="VBoxContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_right = -5.0
offset_bottom = 93.0
grow_horizontal = 0
theme = ExtResource("1_xivxa")
theme_override_constants/separation = -5
script = ExtResource("3_gy65f")

[node name="RunTimeLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="FpsLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="MemoryLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="MemoryPeakLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="VideoMemoryLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="TimeLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="NodesLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="OrphanLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10

[node name="PlayerTemperatureLabel" type="Label" parent="DebugInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_4w6it")
theme_override_font_sizes/font_size = 10
